@@ -1,4 +1,4 @@
-// Copyright 2005, 2006, 2007, 2008, 2012, 2015, 2016, 2021 Global Virtual Airlines Group. All Rights Reserved.
+// Copyright 2005, 2006, 2007, 2008, 2012, 2015, 2016, 2021, 2023 Global Virtual Airlines Group. All Rights Reserved.
 package org.deltava.service.rss;
 
 import java.util.*;
@@ -18,7 +18,7 @@ import org.deltava.util.system.SystemData;
 /**
  * A Web Service to display a Notice to Airmen (NOTAM) RSS feed.
  * @author Luke
- * @version 10.0
+ * @version 10.6
  * @since 1.0
  */
 
@@ -66,20 +66,20 @@ public class NoticeSyndicationService extends WebService {
 		for (News n : entries) {
 			try {
 				// Create the RSS item element
-				URL url = new URL("https", ctx.getRequest().getServerName(), "/notam.do?id=" + StringUtils.formatHex(n.getID()));
+				URI url = new URI("https", ctx.getRequest().getServerName(), "/notam.do?id=" + StringUtils.formatHex(n.getID()));
 				Element item = new Element("item");
 				item.addContent(XMLUtils.createElement("title", n.getSubject()));
 				item.addContent(XMLUtils.createElement("link", url.toString(), true));
 				item.addContent(XMLUtils.createElement("guid", url.toString(), true));
 				ch.addContent(item);
-			} catch (MalformedURLException mue) {
+			} catch (URISyntaxException se) {
 				// empty
 			}
 		}
 
 		// Dump the XML to the output stream
 		try {
-			ctx.setContentType("text/xml", "UTF-8");
+			ctx.setContentType("text/xml", "utf-8");
 			ctx.setExpiry(3600);
 			ctx.println(XMLUtils.format(doc, "UTF-8"));
 			ctx.commit();
